# rust_app

./: Cargo.toml
src/: helper.rs  lib.rs  main.rs  producer.rs  rabbit.rs
src/rabbitmq/: consumer.rs  producer.rs
src/routes/: add.rs  echo.rs  mod.rs  ping.rs
src/routing/: mod.rs
